clang/test/BSC/Positive/Others/asm_function/asm_function.cbs
// RUN: %clang %s %S/test.s --target=x86_64-unknown-linux-gnu -o %t.output
// RUN: %t.output
// expected-no-diagnostics

int asmfunction1() asm ("_asmfunction1");

int main(){
  asmfunction1();
  return 0;
}
