clang/test/BSC/Negative/Method/BuiltInType/int_instance_function_multi_declaration_2/int_instance_function_multi_declaration_2.cbs
// RUN: %clang_cc1 -verify %s

#include "int_header_1.hbs"
#include "int_header_2.hbs"


int main() {
    return 0;
}